public/global.css
@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300..900&display=swap');
@import url('./style/button.css');
@import url('./style/clicker.css');
@import url('./style/input.css');
@import url('./style/selection.css');

:root {
	/* -- Fonts -- */
	--font: Rubik;
	--weight: 400;

	/* -- Colors -- */

	/* Primary */
	--red: hsl(0, 100%, 50%);
	--green: hsl(120, 100%, 50%);
	--blue: hsl(225, 100%, 50%);

	/* Application */
		--neutral-high-h: 0;
		--neutral-high-s: 0%;
		--neutral-high-l: 0%;
	--neutral-high: hsl(var(--neutral-high-h), var(--neutral-high-s), var(--neutral-high-l));
		--neutral-h: 0;
		--neutral-s: 0%;
		--neutral-l: 15%;
	--neutral: hsl(var(--neutral-h), var(--neutral-s), var(--neutral-l));
		--neutral-low-h: 0;
		--neutral-low-s: 0%;
		--neutral-low-l: 20%;
	--neutral-low: hsl(var(--neutral-low-h), var(--neutral-low-s), var(--neutral-low-l));

		--contrast-high-h: 0;
		--contrast-high-s: 0%;
		--contrast-high-l: 100%;
	--contrast-high: hsl(var(--contrast-high-h), var(--contrast-high-s), var(--contrast-high-l));
		--contrast-h: 0;
		--contrast-s: 0%;
		--contrast-l: 85%;
	--contrast: hsl(var(--contrast-h), var(--contrast-s), var(--contrast-l));
		--contrast-low-h: 0;
		--contrast-low-s: 0%;
		--contrast-low-l: 70%;
	--contrast-low: hsl(var(--contrast-low-h), var(--contrast-low-s), var(--contrast-low-l));

		--plink-high-h: 340;
		--plink-high-s: 100%;
		--plink-high-l: 60%;
	--plink-high: hsl(var(--plink-high-h), var(--plink-high-s), var(--plink-high-l));
		--plink-h: 340;
		--plink-s: 100%;
		--plink-l: 50%;
	--plink: hsl(var(--plink-h), var(--plink-s), var(--plink-l));
		--plink-low-h: 340;
		--plink-low-s: 100%;
		--plink-low-l: 40%;
	--plink-low: hsl(var(--plink-low-h), var(--plink-low-s), var(--plink-low-l));

	/* Gradients */
	--neutral-grad: linear-gradient(35deg, var(--neutral-low), 5%, var(--neutral-high));
	--plink-grad: linear-gradient(35deg, var(--plink), 85%, var(--plink-high));

	/* Accessibility */
	/* --focus: hsl(207, 100%, 50%); */
	--focus: var(--plink);

	/* -- Properties -- */
	--shadow: 1px 1px 0.5rem #0000001B;
	--transition: 0.2s cubic-bezier(0.215, 0.610, 0.355, 1.000);
}

* {
	font-family: var(--font), monospace;
	font-weight: var(--weight);
}

kbd {
	font-size: 1rem;
	padding: 0.5rem;
	font-family: monospace;
	text-transform: uppercase;
	background: var(--plink);
	color: var(--neutral-high);
	border-radius: 0.5rem;
}

body {
	width: 100vw;
	height: 100vh;
	margin: 0;
	background: #222;
	color: white;
	box-sizing: border-box;
}

h1, h2, h3, h4, h5, h6, p { margin: 0; }

h1 {
	font-weight: 500;
}

::selection {
	background: var(--neutral-high);
	color: var(--plink);
}

a {
	color: rgb(0,100,200);
	text-decoration: none;
}

a:hover {
	text-decoration: none;
}

a:visited {
	color: rgb(0,80,160);
}

.gradient {
	background: linear-gradient(90deg, rgb(255, 60, 0) 0%, rgba(255,154,0,1) 10%, rgba(208,222,33,1) 20%, rgba(79,220,74,1) 30%, rgba(63,218,216,1) 40%, rgba(47,201,226,1) 50%, rgba(28,127,238,1) 60%, rgba(95,21,242,1) 70%, rgba(186,12,248,1) 80%, rgba(251,7,217,1) 90%, rgba(255,60,100,1) 100%);
	background-clip: text;
	-webkit-background-clip: text;
	color: transparent;
}

